# hidapi

./: meson.build  meson_options.txt
hidapi/: meson.build
libusb/: meson.build
linux/: meson.build
mac/: meson.build
netbsd/: meson.build
windows/: meson.build
windows/pp_data_dump/: meson.build
windows/test/: meson.build
